Updated to newest Forge
Updated forge build, and resolved the CCC issue (I think?) see this
video: https://youtu.be/8QOk1xbw3so about how to get CCC running again.

--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ eclipse
 *.iws
 out
 
-#Ignore minecraft source files
+#Ignore build files
 build
 
-#Ignore compiled mod files
-bin
+#Ignore Minecraft run directory
+run
 
 #Ignore gradle logs
 .gradle
